[gd_scene load_steps=3 format=2]

[ext_resource path="res://Object/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Object/Player/PurpleFlame.png" type="Texture" id=2]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 0 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 35, 0, 27, -8, 15, -8, -8, -31, -12, -31, -12, -8, -23, -8, -23, 8, -12, 8, -12, 31, -8, 31, 15, 8, 27, 8 )

[node name="FrontPos" type="Position2D" parent="."]
position = Vector2( 26, 0 )

[node name="LeftPos" type="Position2D" parent="."]
position = Vector2( -6, -22 )

[node name="RightPos" type="Position2D" parent="."]
position = Vector2( -6, 22 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
